# wazuh_ai_agent

./: .env.example  .gitignore  .gitignore.orig  AGENTS.md  LICENSE  README.md  debug_verification.py  langgraph.json  package-lock.json  pyproject.toml
docs/: topology_path_changes.md
docs/attribution/testcase01/: T1055.012.md
docs/rule_generator/: T1003.001.md
frontend/: .env.example  .gitignore  README.md  agents_topo_data.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/topology/: agents_topo_data.json
frontend/server/: get_data.py
frontend/src/views/: header.vue
frontend/src/views/index/: center-bottom.vue  center-map.vue  index.vue  left-bottom.vue  left-center.vue  left-top.vue  right-bottom.vue  right-center.vue  right-top.vue
src/agents/: agent.py  attribution_agent.py  attribution_agent2.py  demo_agent.py  indexer_agent.py  indexer_agent2.py  response_agent.py  router_agent.py  supervisor_agent.py
src/agents/attack_attribution/: attack_attributor.py  log_retrieval_helper.py  nodes.py  prompt.py  state.py  utils.py
src/agents/attribution/: attribution_agent.py  attributor.py  nodes.py  state.py  utils.py
src/agents/rule_agent/: nodes.py  rule_agent.py  state.py
src/agents/rule_generator/: load_skill.py  nodes.py  rule_generator.py  rule_syntax.md  skills.py  state.py
src/core/: config.py  model_configs.py
src/documents/rag/: rag0.json
src/documents/skill/attribution_skills/: mitre_knowledgebase.md  report_format.md
src/rag/: log1.json
src/service/: topology_service.py
src/wazuh_api/: indexer_api.py  indexer_tools.py  server_api.py  tools.py  wazuh_server_token.py
tests/: test_attack_attributor.py  test_attribution_agent.py  test_demo_agent.py  test_indexer_agent.py  test_indexer_api.py  test_router_agent.py  test_rule_agent_graph.py  test_rule_generator_graph.py  test_server_api.py  test_tools.py  test_topology_api.py  test_wazuh_server_token.py
tests/fixtures/: wazuh_api_responses.json
