[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wazuh_ai_agent"
version = "0.0.1"
authors = [
    { name="KIDPhantom", email="xiangkaicheng@foxmail.com" }
]
description = "An AI agent interacting with Wazuh API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.6",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "pydantic-settings>=2.12.0",
    "requests",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.sdist]
include = [
  "src/*",
  "tests/*",
]
exclude = []

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/wazuh_api", "src/agents"]

# =========== Tool Configurations ============

# Use uv to manage development environment, uv add --dev pkg
[dependency-groups]
dev = [
    "agentevals>=0.0.9",
    "black>=26.1.0",
    "hatch>=1.16.3",
    "langgraph-cli[inmem]>=0.4.11",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
    "ruff>=0.14.13",
]

# uv run --group dev hatch test --all multiple python versions, 
# uv run --group dev hatch test --cover tests coverage.
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13"]

# uv run black .
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
exclude = '''
/(
    \.git
    | \.pytest_cache
    | \.ruff_cache
    | \.venv
    | dist
)/
'''

# uv run ruff check . --fix
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".pytest_cache",
    ".venv",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
